--- a/index.html
+++ b/index.html
@@ -1,11 +1,134 @@
-<!DOCTYPE html>
-<html>
-    <body>
-        <h1>
-            Hello World
-        </h1>
-        <p>
-            I'm hosted with Github Pages
-        </p>
-    </body>
+<!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html lang="en">
+	<head>
+		<title>John Youkhana - Home</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="landing is-preload">
+
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
+
+				<!-- Header -->
+					<header id="header" class="alt">
+						<h1><a href="index.html">John Youkhana</a></h1>
+						<nav id="nav">
+							<ul>
+								<li class="special">
+									<a href="#menu" class="menuToggle"><span>Menu</span></a>
+									<div id="menu">
+										<ul>
+											<li><a href="index.html">Home</a></li>
+											<li><a href="intro.html">About me</a></li>
+											<li><a href="projects.html">Projects</a></li>
+											<li><a href="coursework.html">Coursework</a></li>
+										</ul>
+									</div>
+								</li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Banner -->
+					<section id="banner">
+						<div class="inner">
+							<h2>John Youkhana</h2>
+							<p>Electrical Engineering Student<br />
+							at UIUC<br />
+							<ul class="actions special">
+								<li><a href="Fa2025Resume.pdf" class="button primary" target="_self">Resume</a></li>
+							</ul>
+						</div>
+						<a href="#about_sec" class="more scrolly">About Me</a>
+					</section>
+
+				<!-- About your boy -->
+					<section id="about_sec" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2><a href="intro.html">About me</a>
+								<br /></h2>
+								<p>I'm an Electrical Engineering Undergraduate student at the Grainger college of Engineering<br />
+								of the University of Illinois Urbana Champaign. I'm currently in my second year at this institution, after transferring from the City colleges of Chicago.<br />
+								Here you can find my resume, my coursework, and some projects ive worked on for classes and for fun.
+							</p>
+							</header>
+							<ul class="icons major">
+								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
+								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
+								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- projects -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><a href="projects.html"><img src="images/piano.jpg" alt="" /></a></div><div class="content">
+								<h2><a href="projects.html">Projects</a><br />
+								</h2>
+								<p>I have experience working with Analog Electronic circuits.(portfolio page to be fixed)</p>
+							</div>
+						</section>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style3 special">
+						<header class="inner">
+								<h2><a href="coursework.html">Relevent Coursework</a></h2>
+
+							<div class="row">
+								<div class="col-6 col-12-medium">
+									<h5>Circuits</h5>
+									<ul class="alt">
+										<li><a href="https://ece.illinois.edu/academics/courses/ece342" target="_blank">ECE 342</a> - Electronic Circuits</li>
+										<li><a href="https://ece.illinois.edu/academics/courses/ece343" target="_blank">ECE 343</a> - Electronic Circuits Laboratory</li>
+										<li><a href="https://ece.illinois.edu/academics/courses/ece210" target="_blank">ECE 210</a> - Analog Signal Processing</li>
+									</ul>
+								</div>
+									<div class="col-6 col-12-medium">
+										<h5>Computer Engineering</h5>
+										<ul class="alt">
+											<li><a href="https://ece.illinois.edu/academics/courses/ece385" target="_blank">ECE 385</a> - Digital Systems Laboratory</li>
+											<li><a href="https://ece.illinois.edu/academics/courses/ece220" target="_blank">ECE 220</a> - Computer Systems & Programming</li>
+											<li><a href="https://ece.illinois.edu/academics/courses/ece120" target="_blank">ECE 120</a> - Introduction to Computing</li>
+										</ul>
+									</div>
+							</div>
+							<p><a href="coursework.html">Complete Coursework</a></p>
+						</header>
+					</section>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<ul class="icons">
+							<li><a href="https://www.linkedin.com/in/jyoukhana8580/" class="icon brands fa-linkedin" target="_blank"><span class="label">linkedin</span></a></li>
+							<li><a href="mailto:jjy45321@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/jyoukhana4" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						</ul>
+						<ul class="copyright">
+							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						</ul>
+					</footer>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
