--- a/coursework.html
+++ b/coursework.html
@@ -4,7 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Coursework</title>
 		<meta charset="utf-8" />
@@ -28,7 +28,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="aboutme.html">About Me</a></li>
 											<li><a href="projects.html">Projects</a></li>
-											<li><a href="courses.html">Courses</a></li>
+											<li><a href="coursework.html">Courses</a></li>
 										</ul>
 									</div>
 								</li>
@@ -86,7 +86,7 @@
 							<li><a href="https://github.com/jyoukhana4" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; John Youkhana</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
