--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<div class="image"><a href="projects.html"><img src="images/piano.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Projects</a><br />
 								</h2>
-								<p>I have experience working with Analog Electronic circuits.(portfolio page to be fixed)</p>
+								<p>I have experience working with Analog Electronic circuits, and digital systems.</p>
 							</div>
 						</section>
 					</section>
