--- a/coursework.html
+++ b/coursework.html
@@ -66,6 +66,14 @@
 
 										<div class="col-6 col-12-medium">
 
+											<h5>Microelectronics</h5>
+											<ul class="alt">
+												<li><a href="https://ece.illinois.edu/academics/courses/ece340" target="_blank">ECE 340</a> - Semiconductor Devices</li>
+											</ul>
+										</div>
+
+										<div class="col-6 col-12-medium">
+
 											<h5>Other</h5>
 											<ul class="alt">
 												<li><a href="https://ece.illinois.edu/academics/courses/ece329" target="_blank">ECE 329</a> - Fields and Waves I</li>
