Few minor changes

--- a/Project/fpgatetris.html
+++ b/Project/fpgatetris.html
@@ -56,6 +56,9 @@
 								This involved decoding encoded note and octave data to produce square wave audio signals compatible with the FPGA’s AUX audio output. The overall system demonstrated modular design, combinational logic, SoC integration, and multimedia signal processing. 
 								This project highlighted my ability to design complex digital systems with real-time input/output handling, embedded audio, and efficient hardware resource management.
 								</br>
+								<h4><a href="https://github.com/jyoukhana4/ECE385-FPGA-Tetris">Project github repository</a></h4>
+								<hr />
+								</br>
 								<p><span class="image"><a href="../images/projects/fpgablock.jpg"><img src="../images/projects/fpgablock.jpg" alt="" style="width: 100%; max-width: 1000px; height: auto;"/></a></span></p>
 								<p><span class="image"><a href="../images/projects/fpgaimplementation.jpg"><img src="../images/projects/fpgaimplementation.jpg" alt="" style="width: 100%; max-width: 1000px; height: auto;"/></a></span></p>									
 							</div>
