--- a/coursework.html
+++ b/coursework.html
@@ -40,7 +40,7 @@
 					<article id="main">
 						<header>
 							<h2>Courses</h2>
-							<p>All of my ECE Coursework so far</p>
+							<p>All of my ECE Coursework as of Fall 2025</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
