--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<!-- projects -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><a href="projects.html"><img src="images/piano.jpg" alt="" /></a></div><div class="content">
+							<div class="image"><a href="projects.html"><img src="images/pic01.jpg" alt="" /></a></div><div class="content">
 								<h2><a href="projects.html">Projects</a><br />
 								</h2>
 								<p>I have experience working with Analog Electronic circuits, and digital systems.</p>
