--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 	<head>
 		<title>John Youkhana - Home</title>
 		<meta charset="utf-8" />
+		<meta name="author" content="John Youkhana">
+		<link rel="canonical" href="jyoukhana4.github.io">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="John Youkhana's Website - Electrical Engineering student at the University of Illinois Urbana-Champaign">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
