Add google verification tag to home page.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="John Youkhana's Website - Electrical Engineering student at the University of Illinois Urbana-Champaign">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="google-site-verification" content="hPEZkS0NjzxQ0Escg-wHtUUw_eFEUkpEJmAUwF2hNhQ" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="landing is-preload">
