--- a/coursework.html
+++ b/coursework.html
@@ -47,7 +47,6 @@
 								
 								<div class="row">
 										<div class="col-6 col-12-medium">
-
 											<h5>Computer Engineering</h5>
 											<ul class="alt">
 											    <li><a href="https://ece.illinois.edu/academics/courses/ece385" target="_blank">ECE 385</a> - Digital Systems Laboratory</li>
@@ -55,29 +54,56 @@
 											    <li><a href="https://ece.illinois.edu/academics/courses/ece120" target="_blank">ECE 120</a> - Introduction to Computing</li>
 											</ul>
 										</div>
+										
                                         <div class="col-6 col-12-medium">   
 											<h5>Circuits</h5>
 											<ul class="alt">
+												<!--
+												<li><a href="https://ece.illinois.edu/academics/courses/ece482" target="_blank">ECE 482</a> - Digital IC Design</li>
+												-->
+												<li><a href="https://ece.illinois.edu/academics/courses/ece483" target="_blank">ECE 483</a> - Analog IC Design</li>
 										        <li><a href="https://ece.illinois.edu/academics/courses/ece342" target="_blank">ECE 342</a> - Electronic Circuits</li>
 										        <li><a href="https://ece.illinois.edu/academics/courses/ece343" target="_blank">ECE 343</a> - Electronic Circuits Laboratory</li>
-										        <li><a href="https://ece.illinois.edu/academics/courses/ece210" target="_blank">ECE 210</a> - Analog Signal Processing</li>
 											</ul>
                                         </div> 
 
-										<div class="col-6 col-12-medium">
+										    <div class="col-6 col-12-medium">   
+											<h5>Power and Controls</h5>
+											<ul class="alt">
+												<!--
+												<li><a href="https://ece.illinois.edu/academics/courses/ece464" target="_blank">ECE 464</a> - Power Electronics</li>
+												<li><a href="https://ece.illinois.edu/academics/courses/ece469" target="_blank">ECE 469</a> - Power Electronics Laboratory</li>
+												-->
+										        <li><a href="https://ece.illinois.edu/academics/courses/ece486" target="_blank">ECE 486</a> - Control Systems</li>
+										        <li><a href="https://ece.illinois.edu/academics/courses/ece330" target="_blank">ECE 330</a> - Power Circuits and Electromechanics</li>
+											</ul>
+                                        </div> 
 
+											<div class="col-6 col-12-medium">
+											<h5>Signal Processing</h5>
+											<ul class="alt">
+												<li><a href="https://ece.illinois.edu/academics/courses/ece310" target="_blank">ECE 310</a> - Digital Signal Processing</li>
+												<li><a href="https://ece.illinois.edu/academics/courses/ece311" target="_blank">ECE 311</a> - Digital Signal Processing Lab</li>
+												<li><a href="https://ece.illinois.edu/academics/courses/ece210" target="_blank">ECE 210</a> - Analog Signal Processing</li>
+											</ul>
+										</div>
+
+										<!--
+										<div class="col-6 col-12-medium">
 											<h5>Microelectronics</h5>
 											<ul class="alt">
 												<li><a href="https://ece.illinois.edu/academics/courses/ece340" target="_blank">ECE 340</a> - Semiconductor Devices</li>
 											</ul>
 										</div>
+										-->
 
 										<div class="col-6 col-12-medium">
 
 											<h5>Other</h5>
 											<ul class="alt">
+												<li><a href="https://ece.illinois.edu/academics/courses/ece340" target="_blank">ECE 340</a> - Semiconductor Devices</li>
 												<li><a href="https://ece.illinois.edu/academics/courses/ece329" target="_blank">ECE 329</a> - Fields and Waves I</li>
-                                                <li><a href="https://ece.illinois.edu/academics/courses/ece313" target="_blank">ECE 313</a> - Probability with Engineering Applications</li>
+												<li><a href="https://ece.illinois.edu/academics/courses/ece313" target="_blank">ECE 313</a> - Probability w/ Engineering Applications</li>
 											</ul>
 										</div>
 									</div>
