--- a/index.html
+++ b/index.html
@@ -93,17 +93,19 @@
 								<div class="col-6 col-12-medium">
 									<h5>Circuits</h5>
 									<ul class="alt">
+										<li><a href="https://ece.illinois.edu/academics/courses/ece483" target="_blank">ECE 483</a> - Analog IC Design</li>
 										<li><a href="https://ece.illinois.edu/academics/courses/ece342" target="_blank">ECE 342</a> - Electronic Circuits</li>
 										<li><a href="https://ece.illinois.edu/academics/courses/ece343" target="_blank">ECE 343</a> - Electronic Circuits Laboratory</li>
 										<li><a href="https://ece.illinois.edu/academics/courses/ece210" target="_blank">ECE 210</a> - Analog Signal Processing</li>
 									</ul>
 								</div>
 									<div class="col-6 col-12-medium">
-										<h5>Computer Engineering</h5>
+										<h5>Other</h5>
 										<ul class="alt">
+											<li><a href="https://ece.illinois.edu/academics/courses/ece486" target="_blank">ECE 486</a> - Control Systems</li>
 											<li><a href="https://ece.illinois.edu/academics/courses/ece385" target="_blank">ECE 385</a> - Digital Systems Laboratory</li>
-											<li><a href="https://ece.illinois.edu/academics/courses/ece220" target="_blank">ECE 220</a> - Computer Systems & Programming</li>
-											<li><a href="https://ece.illinois.edu/academics/courses/ece120" target="_blank">ECE 120</a> - Introduction to Computing</li>
+											<li><a href="https://ece.illinois.edu/academics/courses/ece340" target="_blank">ECE 340</a> - Semiconductor Devices</li>
+											<li><a href="https://ece.illinois.edu/academics/courses/ece330" target="_blank">ECE 330</a> - Power Circuits and Electromechanics</li>
 										</ul>
 									</div>
 							</div>
