--- a/projects.html
+++ b/projects.html
@@ -54,6 +54,23 @@
 								<hr />
 
 							</div>
+
+							<div class="inner">
+                                <h3><a href="Project/ACDCsupply343.html">AC-DC Power supply w/ Amplification</a></h3>
+                                <p><span class="image left"><a href="images/powersupply.jpg"><img src="images/powersupply.jpg" alt="" /></a></span>(ECE 343) Electronic Circuits Laboratory</p>
+								<p> 
+								</br>
+								</br>
+								</br>
+								</br>
+								</br>
+								</br>
+								</br>
+								</p>
+								<hr />
+
+							</div>
+
 						</section>
 					</article>
 
